--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -64,14 +64,14 @@
                  </p>
             </div>
             <div class="form-container">
-                <%= form_with url: "contact_complete_path", method: :post, local: true, html: { class: "form" } do |f| %>
+                <%= form_with url: submit_contact_path, method: :post, data: { turbo: false }, html: { class: "form" } do |f| %>
                     <div class="form-group">
                     <%= f.label :name, "NAME" %><br>
                     <%= f.text_field :name, required: true %>
                     </div>
                     <div class="form-group">
                     <%= f.label :email, "E-MAIL" %><br>
-                    <%= f.email_field :email, pattern: "[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}", title: "正しい形式のメールアドレスを入力してください", required: true %>
+                    <%= f.email_field :email, title: "正しい形式のメールアドレスを入力してください",required: true %>
                     </div>
                     <div class="form-group">
                     <%= f.label :message, "MESSAGE" %><br>
