--- a/app/assets/stylesheets/about.css
+++ b/app/assets/stylesheets/about.css
@@ -155,7 +155,8 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    position: relative;
+    position: absolute;
+    top: 27%;
 
 }
 
