--- a/app/assets/stylesheets/contact.css
+++ b/app/assets/stylesheets/contact.css
@@ -144,8 +144,8 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    position: relative;
-
+    position: absolute;
+    top: 27%;
 }
 
 .site-title {
