--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,6 +39,10 @@
       </script>
 
        <header>
+          <div class="site-title">
+            <p class="title-name"><a href="index.html">Akira</a></p>
+            <p class="sakamoto"><a href="index.html">Sakamoto</a></p> 
+          </div>
           <iframe
             src="https://bgm-app-61f72-2c930.web.app"
             width="100%"
