--- a/app/assets/stylesheets/about.scss
+++ b/app/assets/stylesheets/about.scss
@@ -148,22 +148,22 @@ p {
 
 /* header //////////////////////////////////////////////////*/
 
-header {
-    max-width: 1976px;
-    width: 100%;
-    height: 96px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    position: relative;
+// header {
+//     max-width: 1976px;
+//     width: 100%;
+//     height: 96px;
+//     display: flex;
+//     align-items: center;
+//     justify-content: space-between;
+//     position: relative;
 
-}
+// }
 
-.site-title {
-    margin-left: 32px;
-    position: fixed;
-    z-index: 70;
-}
+// .site-title {
+//     margin-left: 32px;
+//     position: fixed;
+//     z-index: 70;
+// }
 
 /* @media screen and (max-width: 415px) {
 
