--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -40,3 +40,21 @@ img {
  p {
   color: black !important;
  }
+
+ header {
+    max-width: 1970px;
+    width: 100%;
+    height: 96px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: absolute;
+    top: 27%;
+}
+
+
+.site-title {
+    margin-left: 32px;
+    position: fixed;
+    top: 7%;
+}
