--- a/app/assets/stylesheets/contact.css
+++ b/app/assets/stylesheets/contact.css
@@ -137,7 +137,7 @@ body {
 
 /* header ////////////////////////////////////////// */
 
-header {
+/* header {
     max-width: 1976px;
     width: 100%;
     height: 96px;
@@ -151,7 +151,8 @@ header {
 .site-title {
     margin-left: 32px;
     position: fixed;
-}
+    top: 7%;
+} */
 
 /* @media screen and (max-width: 430px) {
 
