--- a/app/assets/stylesheets/portfolio.css
+++ b/app/assets/stylesheets/portfolio.css
@@ -199,7 +199,7 @@ body {
 
 /* header ////////////////////////////////////////// */
 
-header {
+/* header {
     max-width: 1970px;
     width: 100%;
     height: 96px;
@@ -214,7 +214,8 @@ header {
 
     margin-left: 32px;
     position: fixed;
-}
+    top: 7%;
+} */
 
 @media screen and (max-width: 430px) {
 
