--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,6 +51,7 @@
             width="100%"
             height="600"
             style="border:none;"
+            allow="autoplay; encrypted-media"
             allowfullscreen
           ></iframe>        
         </header>
