--- a/app/assets/stylesheets/portfolio.css
+++ b/app/assets/stylesheets/portfolio.css
@@ -23,7 +23,8 @@ body {
     display: flex;
     justify-content: center;
     flex-direction: column;
-    align-items: center
+    align-items: center;
+    z-index: 20;
 }
 
 @media screen and (max-width: 1024px) {
