--- a/app/assets/stylesheets/portfolio.css
+++ b/app/assets/stylesheets/portfolio.css
@@ -12,6 +12,25 @@
     padding: 0;  
     /* background-color: rgba(240, 243, 207, 0.997);  
 } */ 
+
+header {
+    max-width: 1970px;
+    width: 100%;
+    height: 96px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: absolute;
+    top: 1%;
+    z-index: 50;
+}
+
+
+.site-title {
+    margin-left: 32px;
+    position: fixed;
+    top: 5%;
+}
  
 .container {
     max-width: 1970px;
