--- a/app/assets/stylesheets/contact.css
+++ b/app/assets/stylesheets/contact.css
@@ -1,5 +1,23 @@
 @charset "utf-8";
 
+header {
+    max-width: 1970px;
+    width: 100%;
+    height: 182px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: absolute;
+    top: 1%;
+    z-index: 50;
+}
+
+
+.site-title {
+    margin-left: 32px;
+    position: fixed;
+    top: 5%;
+}
 
 .container {
     max-width: 1970px;
