--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,8 +43,8 @@
 
        <header>
           <div class="site-title">
-            <p class="title-name"><a href="index.html">Akira</a></p>
-            <p class="sakamoto"><a href="index.html">Sakamoto</a></p> 
+            <p class="title-name"><%= link_to "Akira", home_path %></p>
+            <p class="sakamoto"><%= link_to "Sakamoto", home_path %></p>
           </div>
           <iframe
             src="https://bgm-app-61f72-2c930.web.app"
