--- a/app/views/layouts/contact_layout.html.erb
+++ b/app/views/layouts/contact_layout.html.erb
@@ -4,6 +4,7 @@
     <%= tag.link rel: "preconnect", href: "https://fonts.googleapis.com" %>
     <%= tag.link rel: "preconnect", href: "https://fonts.gstatic.com", crossorigin: true %>
     <%= tag.link rel: "stylesheet", href: "https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Castoro+Titling&family=Monoton&family=Montserrat+Alternates:wght@500&family=Questrial&family=Prata&display=swap" %>
+    <%= stylesheet_link_tag "contact", "data-turbo-track": "reloard" %>
 <% end %>
 
 <% yield %>
