--- a/app/views/layouts/about_layout.html.erb
+++ b/app/views/layouts/about_layout.html.erb
@@ -7,7 +7,7 @@
   <%= tag.link rel: "preconnect", href: "https://fonts.googleapis.com" %>
   <%= tag.link rel: "preconnect", href: "https://fonts.gstatic.com", crossorigin: true %>
   <%= tag.link rel: "stylesheet", href: "https://fonts.googleapis.com/css2?family=Prata&display=swap" %>
-  <%= stylesheet_link_tag "about", "data-turbo-track": "reloard" %>
+  <%= stylesheet_link_tag "about", "data-turbo-track": "reload" %>
   
 <% end %>
 
