--- a/app/views/layouts/home_layout.html.erb
+++ b/app/views/layouts/home_layout.html.erb
@@ -5,7 +5,7 @@
     <%= tag.link rel: "stylesheet", href: "https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Castoro+Titling&family=Monoton&family=Montserrat+Alternates:wght@500&family=Questrial&display=swap" %>
     <%= tag.link rel: "stylesheet", href: "https://fonts.googleapis.com/css2?family=Prata&display=swap" %>
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
-    <%= stylesheet_link_tag "home", "data-turbo-track": "reloard" %>
+    <%= stylesheet_link_tag "home", "data-turbo-track": "reload" %>
 <% end %>
 
 <% yield %>
