Update application.html.erb iframe

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,6 +53,7 @@
             style="border:none;"
             allow="autoplay; encrypted-media"
             allowfullscreen
+            data-turbolinks-permanent
           ></iframe>        
         </header>
 
