--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,7 +41,7 @@
         var muteIconPath  = "<%= asset_path('mute-svgrepo-com.svg') %>";
       </script>
 
-       <header class="<%= 'contact_header' if current_page?(contact_path) %>">
+       <header class="<%= 'contact_header' if current_page?(contact_path) %>"></header>
           <div class="site-title">
             <p class="title-name"><%= link_to "Akira", home_path %></p>
             <p class="sakamoto"><%= link_to "Sakamoto", home_path %></p>
@@ -50,12 +50,12 @@
             src="https://bgm-app-61f72-2c930.web.app"
             width="100%"
             height="176"
-            style="border:none;"
+            style="position: fixed; top: 10%; right: 96px; width: 300px; height: 172px; border: none; z-index: 50;"
             allow="autoplay; encrypted-media"
             allowfullscreen
             data-turbolinks-permanent
           ></iframe>        
-        </header>
+        
 
     <%= yield %>
     
