--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,10 +50,11 @@
             src="https://bgm-app-61f72-2c930.web.app"
             width="100%"
             height="176"
-            style="position: fixed; top: 10%; right: 96px; width: 300px; height: 172px; border: none; z-index: 50;"
+            style="position: absolute; top: 2%; right: 8px; width: 560px; height: 172px; border: none; z-index: 900;"
             allow="autoplay; encrypted-media"
             allowfullscreen
             data-turbolinks-permanent
+            position: fixed;
           ></iframe>        
         
 
