--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,11 +22,11 @@
       <%= tag.link href: "https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Castoro+Titling&family=Monoton&family=Montserrat+Alternates:wght@500&family=Questrial&display=swap", rel: "stylesheet" %>
       <%= tag.link href: "https://fonts.googleapis.com/css2?family=Prata&display=swap", rel: "stylesheet" %>
       <%= javascript_include_tag "jquery-3.6.1min", defer: true %>
-      <%#<%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
-      <%#<%= javascript_include_tag "bgm", defer: true %>
-      <%= javascript_include_tag "MS", defer: true %>
-      <%= javascript_include_tag "progress-bar", defer: true %>
       <%= javascript_importmap_tags %>
+      // <%#<%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
+      <%= javascript_include_tag "bgm", defer: true %>
+      <%= javascript_include_tag "MS", defer: true %>
+      <%= javascript_include_tag "open-window", defer: true %>
     </head>
 
     
@@ -41,22 +41,20 @@
         var muteIconPath  = "<%= asset_path('mute-svgrepo-com.svg') %>";
       </script>
 
-       <header class="<%= 'contact_header' if current_page?(contact_path) %>"></header>
+       <header class="<%= 'contact_header' if current_page?(contact_path) %>">
           <div class="site-title">
             <p class="title-name"><%= link_to "Akira", home_path %></p>
             <p class="sakamoto"><%= link_to "Sakamoto", home_path %></p>
           </div>
-          <iframe
-            src="https://bgm-app-61f72-2c930.web.app"
-            width="100%"
-            height="176"
-            style="position: absolute; top: 2%; right: 8px; width: 560px; height: 172px; border: none; z-index: 900;"
-            allow="autoplay; encrypted-media"
-            allowfullscreen
-            data-turbolinks-permanent
-            position: fixed;
-          ></iframe>        
-        
+            <div class="wrapper">
+                <div class="audio_wrap">
+                <div class="audio_button">
+                    <%= image_tag "listen.png", class: "listen", width: "160px", height: "160px" %>
+                    <%= image_tag "mute-svgrepo-com.svg", width: "72px", height: "72px", class: "sound-logo" %>
+                </div>
+                </div>
+            </div>        
+        </header>
 
     <%= yield %>
     
