--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,10 +23,12 @@
       <%= tag.link href: "https://fonts.googleapis.com/css2?family=Prata&display=swap", rel: "stylesheet" %>
       <%= javascript_include_tag "jquery-3.6.1min", defer: true %>
       <%= javascript_importmap_tags %>
-      // <%#<%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
+      <%= javascript_include_tag "application", "data-turbo-track": "reload", type: "module" %>
+      <%#<%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
       <%= javascript_include_tag "bgm", defer: true %>
       <%= javascript_include_tag "MS", defer: true %>
       <%= javascript_include_tag "open-window", defer: true %>
+     
     </head>
 
     
