オーディオ再生がページ遷移しても途切れないバージョン

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,9 +25,9 @@
       <%= javascript_importmap_tags %>
       <%= javascript_include_tag "application", "data-turbo-track": "reload", type: "module" %>
       <%#<%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
-      <%= javascript_include_tag "bgm", defer: true %>
+      <%#<%= javascript_include_tag "bgm", defer: true %>
       <%= javascript_include_tag "MS", defer: true %>
-      <%= javascript_include_tag "open-window", defer: true %>
+      <%#<%= javascript_include_tag "open-window", defer: true %>
      
     </head>
 
