Update ci.yml and others

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -87,7 +87,7 @@
                                             <%= link_to "Architecture Chart", image_path("Blank diagram-12.png"), class: "architex" %>
                                         </div>
                                         <div class="code-detail">
-                                            <%= link_to "Code Detail", "https://github.com/henrry-sakurazaka/Reminder", class: "git" %>
+                                            <%= link_to "Code Detail", "https://github.com/henrry-sakurazaka/Reminder", class: "git" "zero"%>
                                         </div>
                                     </figcaption>
                                 </div>
@@ -116,7 +116,7 @@
                                         <h2 class="works-text-name">Hello TypeScript </h2>
                                         <span class="caption-text">Front-end </span>
                                         <div class="code-detail">
-                                            <%= link_to "Code Details",  "https://github.com/henrry-sakurazaka/Hello-TypeScript", class: "git" %>
+                                            <%= link_to "Code Details",  "https://github.com/henrry-sakurazaka/Hello-TypeScript", class: "git" "one" %>
                                         </div>
                                     </figcaption>
                                 </div>
@@ -174,7 +174,7 @@
                                         <h2 class="works-text-name">MEGUMI COMPLETA</h2>
                                         <span class="caption-text">Design & Front-end & Back-end</span>
                                         <div class="code-detail">
-                                            <%= link_to "Code Details", "https://github.com/henrry-sakurazaka/Megumi-Completa-Official", class: "git" %>
+                                            <%= link_to "Code Details", "https://github.com/henrry-sakurazaka/Megumi-Completa-Official", class: "git" "two" %>
                                         </div>
                                     </figcaption>
                                 </div>
@@ -204,7 +204,7 @@
                                         <h2 class="works-text-name">ENGENEER POST</h2>
                                         <span class="caption-text">Back-end & Front-end</span>
                                         <div class="code-detail">
-                                            <%= link_to "Code Details", "https://github.com/henrry-sakurazaka/Engineer-Post", class: "git" %>
+                                            <%= link_to "Code Details", "https://github.com/henrry-sakurazaka/Engineer-Post", class: "git" "three"%>
                                         </div>
                                     </figcaption>
                                 </div>
