--- a/app/assets/stylesheets/about.scss
+++ b/app/assets/stylesheets/about.scss
@@ -887,7 +887,7 @@ dt {
 
 }
 
-.about {
+.contact {
     display: block;
     margin-bottom: 160px;
     visibility: visible;
@@ -897,10 +897,9 @@ dt {
     margin-left: 24px;
     position: absolute;
     top: 0;
-
 }
 
-.top {
+.slide-in-nav {
     display: block;
     margin-bottom: 160px;
     visibility: visible;
@@ -909,7 +908,7 @@ dt {
     font-weight: bold;
     margin-left: 24px;
     position: absolute;
-    top: 50%;
+    top: 0;
     writing-mode: vertical-lr;
 }
 
