--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -175,12 +175,12 @@
             <div class="nav-container">
                 <nav class="navi">
                     <div class="dot animate__bounce animate__infinite"></div>
-                    <%= link_to "Contact", contact_path,  class: "about" %>
+                    <%= link_to "Contact", contact_path,  class: "contact" %>
                 <div class="center">
                     <div class="center-inner">
 
                         <div class="inner">
-                            <%= link_to "Top", home_path, class: "top" %>
+                            <%= link_to "Top", home_path, class: "slide-in-nav2" %>
                         <span class="line2"></span>
                     </div>
                 </div>
