--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -70,11 +70,11 @@
             <div class="nav-container">
                 <nav class="navi">
                     <div class="dot  animate__bounce animate__infinite"></div>
-                    <%= link_to "Top", home_path, class: "about" %>
+                    <%= link_to "Top", home_path, class: "top" %>
                     <div class="center">
                         <div class="center-inner">
                             <div class="inner">
-                                <%= link_to "About", about_path, class: "top" %>
+                                <%= link_to "About", about_path, class: "slide-in-nav3" %>
                                 <span class="line3"></span>
                             </div>    
                         </div>
