--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -53,7 +53,7 @@
             <section>
                 <ul class="works">
                     <li class="works-li">
-                        <%= link_to "https://reminder5-27ef0.web.app", target: "_blank" do %>
+                        <%= link_to "https://reminder5-27ef0.web.app", class: "reminder-img", target: "_blank" do %>
                             <div class="works-container">
                                     <div class="caption">
                                         <p class="used-language">Deliveravle - Official Appreciation</p>
@@ -87,7 +87,7 @@
                                             <%= link_to "Architecture Chart", image_path("Blank diagram-12.png"), class: "architex" %>
                                         </div>
                                         <div class="code-detail">
-                                            <%= link_to "Code Detail", "https://github.com/henrry-sakurazaka/Reminder", class: "git" "zero"%>
+                                            <%= link_to "Code Detail", "https://github.com/henrry-sakurazaka/Reminder", class: "git zero"%>
                                         </div>
                                     </figcaption>
                                 </div>
@@ -95,7 +95,7 @@
                         <% end %>
                     </li>
                         <li class="works-li">
-                            <%= link_to "https://hello-typescript-8a1d9.web.app", target: "_blank" do %>
+                            <%= link_to "https://hello-typescript-8a1d9.web.app", class: "typescript-img", target: "_blank" do %>
                                 <div class="works-container">
                                     <div class="caption ">
                                         <p class="used-language">Deliveravle - Portfolio Appreciation</p>
@@ -116,7 +116,7 @@
                                         <h2 class="works-text-name">Hello TypeScript </h2>
                                         <span class="caption-text">Front-end </span>
                                         <div class="code-detail">
-                                            <%= link_to "Code Details",  "https://github.com/henrry-sakurazaka/Hello-TypeScript", class: "git" "one" %>
+                                            <%= link_to "Code Details",  "https://github.com/henrry-sakurazaka/Hello-TypeScript", class: "git one" %>
                                         </div>
                                     </figcaption>
                                 </div>
@@ -124,7 +124,7 @@
                         <% end %>
                     </li>
                         <li class="works-li">
-                            <%= link_to "http://sakurazaka.s324.xrea.com/mountain-view/mountain.html", target: "_blank" do %>
+                            <%= link_to "http://sakurazaka.s324.xrea.com/mountain-view/mountain.html", class: "mountain-img", target: "_blank" do %>
                                 <div class="works-container">
                                     <div class="caption ">
                                         <p class="used-language">Deliveravle - IntersectionObserver API Demo site</p>
@@ -153,7 +153,7 @@
                         <% end %>
                     </li>
                         <li class="works-li">
-                            <%= link_to "http://sakurazaka.s324.xrea.com/megumi-completa/megumi-completa3/HELLO5.html", target: "_blank" do %>
+                            <%= link_to "http://sakurazaka.s324.xrea.com/megumi-completa/megumi-completa3/HELLO5.html", class: "megumi-completa-img", target: "_blank" do %>
                                 <div class="works-container">
                                     <div class="caption ">
                                         <p class="used-language">Deliveravle - Artist site</p>
@@ -174,7 +174,7 @@
                                         <h2 class="works-text-name">MEGUMI COMPLETA</h2>
                                         <span class="caption-text">Design & Front-end & Back-end</span>
                                         <div class="code-detail">
-                                            <%= link_to "Code Details", "https://github.com/henrry-sakurazaka/Megumi-Completa-Official", class: "git" "two" %>
+                                            <%= link_to "Code Details", "https://github.com/henrry-sakurazaka/Megumi-Completa-Official", class: "git two" %>
                                         </div>
                                     </figcaption>
                                 </div>
@@ -183,7 +183,7 @@
                     </li>
                                 
                         <li class="works-li">
-                            <%= link_to "http://sakurazaka.s324.xrea.com/products-app/bbs.php", target: "_blank" do %>
+                            <%= link_to "http://sakurazaka.s324.xrea.com/products-app/bbs.php", class: "engineer-post-img", target: "_blank" do %>
                                 <div class="works-container">
                                     <div class="caption ">
                                         <p class="used-language">Deliveravle - Demo Appreciation</p>
@@ -204,7 +204,7 @@
                                         <h2 class="works-text-name">ENGENEER POST</h2>
                                         <span class="caption-text">Back-end & Front-end</span>
                                         <div class="code-detail">
-                                            <%= link_to "Code Details", "https://github.com/henrry-sakurazaka/Engineer-Post", class: "git" "three"%>
+                                            <%= link_to "Code Details", "https://github.com/henrry-sakurazaka/Engineer-Post", class: "git three"%>
                                         </div>
                                     </figcaption>
                                 </div>
@@ -222,8 +222,8 @@
                             <div class="center">
                                 <div class="center-inner">
                                     <div class="inner">
-                                        <%= link_to "Contact" , contact_path, class: "contact" %>
-                                        <span class="line1"></span>
+                                        <%= link_to "Contact" , contact_path, class: "slide-in-nav" %>
+                                        <span class="line1"></span>                 
                                     </div>     
                                 </div>
                             </div>  
